# evocell

./: Cargo.toml  README.md
src/: cell.rs  consts.rs  etc.rs  genome.rs  lib.rs  main.rs  math.rs  traits.rs  world.rs
src/client/: mod.rs  traits.rs
src/client/sdl/: mod.rs
