[package]
name = "evocell"
version = "0.1.0"
edition = "2024"
authors = ["Nevals Wandervals <nevals.wandervals@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
rand = "0.8.2"
variant_count = "1.2.0"
variantly = "0.4.0"

[features]
default = ["sdl3"]
sdl3 = ["dep:sdl3"]

[dependencies.sdl3]
version = "0.17.3"
optional = true